--- a/00_download_data.ipynb
+++ b/00_download_data.ipynb
@@ -2,26 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
-    "import os"
+    "import os\n",
+    "import patoolib\n",
+    "import unrar\n",
+    "import rarfile\n",
+    "import rarfile\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download\n",
+    "\n",
+    "As a first step define the URL we are downloading.\n",
+    "Make a directory to store the raw data in and we can download it using the subprocess module."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://data.mendeley.com/datasets/5y9wdsg2zt/2/files/c0d86f9f-852e-4d00-bf45-9a0e24e3b932/Concrete%20Crack%20Images%20for%20Classification.rar?dl=1'\n"
+    "url = 'https://data.mendeley.com/datasets/5y9wdsg2zt/2/files/c0d86f9f-852e-4d00-bf45-9a0e24e3b932/Concrete%20Crack%20Images%20for%20Classification.rar?dl=1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +58,7 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,8 +68,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract\n",
+    "\n",
+    "For extraction I found these very useful strack overflow posts:\n",
+    "\n",
+    "https://stackoverflow.com/questions/40251033/not-managing-to-extract-rar-archive-using-rarfile-module\n",
+    "\n",
+    "https://codereview.stackexchange.com/questions/116843/extracting-rar-files-in-a-directory\n",
+    "\n",
+    "make sure you have unrar installed! the command line below can make it useful"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -64,14 +93,101 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subprocess.call(['unrar', 'x', 'raw_data/raw.rar', 'data'])"
+    "subprocess.call(['sudo', 'apt', 'install', 'unrar'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define where we downloaded the file\n",
+    "dpath=root_dir\n",
+    "#rar file name\n",
+    "rar='raw.rar'\n",
+    "#directory we extract files to\n",
+    "xpath = dpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['raw.rar', '.ipynb_checkpoints']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#see what's inside\n",
+    "os.listdir(dpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'raw_data/raw.rar'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the file path\n",
+    "filepath = os.path.join(dpath, rar)\n",
+    "filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#open the rar file\n",
+    "opened_rar = rarfile.RarFile(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#define the unraring tool and extract\n",
+    "rarfile.UNRAR_TOOL='unrar'\n",
+    "opened_rar.extractall(xpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -97,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
